updated styles on portfolio site. added designer's recomendations(add link to resume, make some text smaller on mobile, add margin on mobile, fix breakpoints, remove phone number on contact page)

--- a/assets/css/newstyles.scss
+++ b/assets/css/newstyles.scss
@@ -27,6 +27,12 @@ $color__red: #d63230;
   box-sizing: border-box;
 }
 #index {
+  @media (max-width: 800px) {
+    .hello__text {
+      font-size: 0.1em;
+      color: red;
+    }
+  }
   font-family: "Poppins", sans-serif;
   .welcome {
     a {
@@ -100,6 +106,10 @@ $color__red: #d63230;
         max-width: 40%;
 
         text-align: center;
+        @media (max-width: 800px) {
+          font-size: 2em;
+          color: red;
+        }
       }
       .home__picture {
         max-width: 40%;
@@ -126,6 +136,9 @@ $color__red: #d63230;
       margin-top: 5%;
 
       font-size: 3.5em;
+      @media (max-width: 570px) {
+        font-size: 2em;
+      }
 
       a {
         text-transform: uppercase;
@@ -216,6 +229,9 @@ body {
 
 main {
   padding: 5% 3% 0 3%;
+  @media (max-width: 500px) {
+    margin-top: 10%;
+  }
 }
 // BIO BEGINS
 #bio {
@@ -233,11 +249,12 @@ main {
     }
     p {
       font-size: 1.25em;
-      line-height: 2;
+      line-height: 2.5;
     }
     p::first-letter {
       font-size: 3em;
       color: $color__gold;
+      line-height: 0;
     }
     h1 {
       font-size: 5em;
@@ -303,7 +320,7 @@ main {
 
     figure {
       flex-basis: 25%;
-
+      margin-bottom: 5%;
       figcaption {
         text-align: center;
         padding: 0;
@@ -322,6 +339,7 @@ main {
         width: 100%;
         display: block;
         border-radius: $bradius;
+        margin-bottom: 5%;
         line-height: 0;
         @media (max-width: 800px) {
           // display: block;
@@ -335,8 +353,43 @@ main {
 //GALLERY ENDS
 // RESUME BEGINS
 #resume {
+  @media (max-width: 500px) {
+    main {
+      font-size: 0.5em;
+      * {
+        text-align: center;
+      }
+    }
+    h1 {
+      font-size: 0.1em;
+    }
+  }
   main {
+    position: relative;
     line-height: 2;
+  }
+  .download__resume {
+    position: absolute;
+    right: 0;
+    margin-right: 5%;
+    margin-top: 3%;
+    // height: 7em;
+    width: 10em;
+    background-color: #737373;
+    // text-align: center;
+    text-align: center;
+    @media (max-width: 350px) {
+      margin-top: 50px;
+    }
+    &:hover {
+      background-color: $color__gold;
+    }
+    a {
+      color: #000;
+      font-size: 1.5em;
+      text-transform: uppercase;
+      text-decoration: none;
+    }
   }
   @include headers--size();
   section {
@@ -430,6 +483,24 @@ main {
 
     text-align: center;
     // display: block;
+    .clickhere {
+      display: block;
+      // padding: 5px 20px;
+      // height: 2em;
+      font-size: 3em;
+      width: 3em;
+      // height: 2em;
+      text-align: center;
+      background-color: $color__gold;
+      margin: 0 auto;
+      text-transform: uppercase;
+      border-radius: $bradius;
+      color: black;
+      text-decoration: none;
+      &:hover {
+        background-color: #fff;
+      }
+    }
     section {
       h2,
       h3,
@@ -507,6 +578,9 @@ main {
         border-bottom: 3px solid #cc9900;
         resize: none;
         font-size: 1.25em;
+        @media (max-width: 600px) {
+          font-size: 1em;
+        }
       }
 
       ::placeholder {
@@ -526,6 +600,12 @@ main {
           background-color: white;
           color: #cc9900;
           cursor: pointer;
+        }
+        @media (max-width: 1100px) {
+          font-size: 2em;
+        }
+        @media (max-width: 600px) {
+          font-size: 1em;
         }
       }
     }
